# KS_MCP_Server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_mcp_tools.py
External-MCP_Cursor_config/: External MCP server config in Cursor and using MCP tools.docx  External MCP server config in Cursor.docx
app/: server.py  server_ws.py
tests/: mcp_all_tools_fastclient.py  mcp_tools_fastclient.py  test_mcp_tools_ws.py
