
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ks-mcp-server"
version = "0.1.0"
description = "Production-ready FastMCP server with health, hello, and UUID tools"
authors = [
    { name = "Satheesh", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=0.3.0",
    "pytest>=8.4.0"
    
]

[project.urls]
Homepage = "https://github.com/your-org/fastmcp-server"
